# PawnLogic

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile.test  GUIDE.md  GUIDE_CN.md  GUIDE_EN.md  GUIDE_zh-CN.md  LICENSE  PROJECT_MEMORY.md  README.md  README_CN.md  README_zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  config.py  conftest.py  docker-compose.test.yml  install.sh  main.py  mcp_configs.example.json  pawn.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  main_ci.yml  publish.yml
config/: __init__.py  paths.py  phases.py  providers.py  sandbox.py  security.py  tiers.py
core/: api_client.py  api_errors.py  api_payloads.py  api_retry.py  context_window.py  ctf_workspace.py  file_store.py  git_security.py  gsa.py  host_process.py  interrupts.py  logger.py  mcp_client_manager.py  mcp_loader.py  memory.py  message_history.py  naming.py  operation_policy.py  output.py  path_policy.py  persistence.py  plan_guard.py  prompt_builder.py  provider_runtime.py  provider_streams.py  provider_transport.py  provider_tui.py  provider_tui_state.py  runtime_context.py  runtime_metrics.py  session.py  session_snapshot.py  session_tool_loop.py  skill_manager.py  state.py  tool_calls.py  tool_executor.py  tool_registry.py  tool_result.py  tool_routing.py  (+5 more)
core/commands/: __init__.py  _common.py  ctf.py  provider.py  session.py  system.py  tools.py  workspace.py
docs/: MODULE_MAP.md  codex-wsl2-automation.md
docs/adr/: 0001-runtime-context.md  0002-provider-runtime.md  0003-provider-stream-contract.md  0004-tool-trust-policy.md  0005-runtime-evaluation-artifacts.md  0006-skill-pack-packaging.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/plans/: 0.1.1-stabilization-plan.md  0.1.2-ctf-workflow-polish.md  0.1.6-maintenance-hardening.md  0.1.7-maintenance-hardening.md  0.2.0-consolidation-release.md  0.2.1-post-release-stabilization.md  0.2.2-runtime-evaluation-architecture-slimming.md  0.2.3-autonomous-runtime-reliability-deepening.md  INDEX.md
docs/plans/archive/: 0.1.1-stabilization-plan.md  0.1.2-ctf-workflow-polish.md
pawnlogic/: __init__.py  __main__.py  cli.py  repl.py  startup.py
pawnlogic/core/: __init__.py  agent.py  message.py  orchestrator.py
pawnlogic/plugins/: __init__.py  base.py  registry.py
pawnlogic/plugins/builtin/: __init__.py  calculator.py  web_search.py
pawnlogic/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
skills/: README.md
skills/ctf_app_system/: manifest.json  skill.md
skills/ctf_automation/: manifest.json  skill.md
skills/ctf_crypto/: manifest.json  skill.md
skills/ctf_forensics/: manifest.json  skill.md
skills/ctf_malware/: manifest.json  skill.md
skills/ctf_misc/: manifest.json  skill.md
skills/ctf_osint/: manifest.json  skill.md
skills/ctf_pwn/: manifest.json  skill.md
skills/ctf_reverse/: manifest.json  skill.md
skills/ctf_web/: manifest.json  skill.md
skills/demo_stack_overflow/: guide.md  manifest.json
skills/heap_exploit/: manifest.json  skill.md
skills/solve_challenge/: manifest.json  skill.md
tests/: helpers.py  test_agent_orchestrator.py  test_api_empty_response.py  test_api_errors.py  test_api_retry.py  test_api_stream_helpers.py  test_browser_ops.py  test_check_doc_structure.py  test_check_release_consistency.py  test_cli_runtime_split.py  test_cli_startup.py  test_cli_transcripts.py  test_code_index.py  test_codex_goal_run.py  test_commands_dispatch.py  test_config.py  test_context_window.py  test_core_coverage.py  test_core_message.py  test_ctf_workflow.py  test_delegate_tool.py  test_deployment_friendly.py  test_docker_policy.py  test_docs_workflow.py  test_e2e.py  test_eval_json.py  test_file_store.py  test_host_process.py  test_lsp_lite.py  test_mcp_client_manager.py  test_mcp_config.py  test_memory_reliability.py  test_merge_ctf_skills.py  test_naming.py  test_operation_policy.py  test_path_policy.py  test_plugins.py  test_process_trust_routing.py  test_prompt_builder.py  test_provider_commands.py  (+26 more)
tests/fixtures/provider_streams/: anthropic_replay.jsonl  anthropic_text_basic.jsonl  openai_replay.jsonl  openai_text_basic.jsonl
tools/: browser_ops.py  check_architecture_budget.py  check_doc_structure.py  check_release_consistency.py  cli_transcript_runner.py  code_index.py  codex_goal_run.sh  delegate_tool.py  docker_plan.py  docker_sandbox.py  file_ops.py  lsp_lite.py  merge_ctf_skills.py  pwn_binary.py  pwn_chain.py  pwn_debugger.py  recon_ops.py  runtime_eval.py  sandbox.py  shell_ops.py  text_patch.py  vision.py  web_ops.py
tools/eval/: __init__.py  artifacts.py  contracts.py  redaction.py  runner.py
tools/eval/scenarios/: __init__.py  offline.py  soak.py  tools.py
utils/: ansi.py  key_utils.py
