
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pawnlogic"
dynamic = ["version"]
description = "A fully autonomous terminal AI agent — multi-model routing, persistent memory, real tool execution"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "john0123412", email = "junjohn05@gmail.com"},
]
keywords = ["ai-agent", "llm", "ctf", "cli", "autonomous", "multi-model", "security", "pwn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]

dependencies = [
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "loguru>=0.7",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/john0123412/PawnLogic"
Repository = "https://github.com/john0123412/PawnLogic"
Issues = "https://github.com/john0123412/PawnLogic/issues"
Changelog = "https://github.com/john0123412/PawnLogic/blob/main/CHANGELOG.md"

[project.scripts]
pawn = "main:run"

[tool.setuptools.dynamic]
version = {attr = "config.paths.VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "tools*", "utils*", "skills*"]

# main.py lives at root — declare it explicitly as a py-module
[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.sh", "*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
