
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pawnlogic"
dynamic = ["version"]
description = "A fully autonomous terminal AI agent — multi-model routing, persistent memory, real tool execution"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "john0123412", email = "junjohn05@gmail.com"},
]
keywords = ["ai-agent", "llm", "ctf", "cli", "autonomous", "multi-model", "security", "pwn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    # License classifier omitted: PEP 639 forbids it alongside the
    # SPDX `license = "MIT"` expression above. setuptools rejects both.
]

dependencies = [
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "loguru>=0.7",
    "anthropic>=0.40",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "pexpect>=4.8; sys_platform != 'win32'",
    "ruff>=0.4",
]
docker = ["docker>=6.0"]
browser = ["scrapling>=0.2", "patchright>=1.40"]
ctf = [
    "pwntools>=4.11",
    "ROPgadget>=7.4",
    "ropper>=1.13",
]

[project.urls]
Homepage = "https://github.com/john0123412/PawnLogic"
Repository = "https://github.com/john0123412/PawnLogic"
Issues = "https://github.com/john0123412/PawnLogic/issues"
Changelog = "https://github.com/john0123412/PawnLogic/blob/main/CHANGELOG.md"
Documentation = "https://github.com/john0123412/PawnLogic/blob/main/GUIDE_EN.md"

[project.scripts]
pawn = "main:run"

[tool.setuptools.dynamic]
version = {attr = "config.paths.VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "tools*", "utils*", "skills*"]
# CTF skill packs are large and optional; install via `pip install pawnlogic[ctf]`
# to opt into pwntools/ROPgadget/ropper. The skill markdown lives outside the wheel
# and ships separately (see CONTRIBUTING.md for the ctf-skills add-on).
exclude = ["skills.ctf_*"]

# main.py lives at root — declare it explicitly as a py-module
[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.sh", "*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# CI blocks syntax/name errors plus low-risk hygiene issues:
# unused imports (F401), unused locals (F841), and bare except (E722).
select = ["E9", "F821", "F401", "F841", "E722"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
