
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pawnlogic"
dynamic = ["version"]
description = "A fully autonomous terminal AI agent — multi-model routing, persistent memory, real tool execution"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "john0123412", email = "junjohn05@gmail.com"},
]
keywords = ["ai-agent", "llm", "ctf", "cli", "autonomous", "multi-model", "security", "pwn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    # License classifier omitted: PEP 639 forbids it alongside the
    # SPDX `license = "MIT"` expression above. setuptools rejects both.
]

dependencies = [
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "loguru>=0.7",
    "anthropic>=0.40",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "pexpect>=4.8; sys_platform != 'win32'",
    "ruff>=0.4",
]
docker = ["docker>=6.0"]
browser = ["scrapling>=0.2", "patchright>=1.40"]
ctf = [
    "pwntools>=4.11",
    "ROPgadget>=7.4",
    "ropper>=1.13",
]

[project.urls]
Homepage = "https://github.com/john0123412/PawnLogic"
Repository = "https://github.com/john0123412/PawnLogic"
Issues = "https://github.com/john0123412/PawnLogic/issues"
Changelog = "https://github.com/john0123412/PawnLogic/blob/main/CHANGELOG.md"
Documentation = "https://github.com/john0123412/PawnLogic/blob/main/GUIDE_EN.md"

[project.scripts]
pawn = "pawnlogic.cli:run"

[tool.setuptools.dynamic]
version = {attr = "config.paths.VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pawnlogic*", "config*", "core*", "tools*", "utils*"]
# Local skill packs are source-checkout assets, not runtime package data.
# PyPI wheels and sdists must not include skills/ so pip/curl installations
# start with an empty user skill-pack directory.
exclude = ["skills*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.sh", "*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# CI blocks syntax/name errors plus low-risk hygiene issues:
# unused imports (F401), unused locals (F841), bare except (E722),
# bugbear checks (B), simplification hints (SIM), pyupgrade (UP), and Ruff
# specific hygiene (RUF). Legacy debt is quarantined below per file so new
# modules still get the expanded rule surface.
select = ["E9", "F821", "F401", "F841", "E722", "B", "SIM", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"config/__init__.py" = ["RUF022"]
"config/providers.py" = ["RUF015", "SIM103", "SIM105"]
"config/security.py" = ["RUF005"]
"conftest.py" = ["RUF100"]
"core/api_client.py" = ["RUF005", "SIM105", "UP041"]
"core/api_errors.py" = ["SIM108"]
"core/commands/__init__.py" = ["RUF022", "RUF100", "UP035"]
"core/commands/_common.py" = ["RUF022", "UP045"]
"core/commands/provider.py" = ["B007", "RUF001", "RUF100", "SIM105", "SIM108"]
"core/commands/session.py" = ["RUF059"]
"core/commands/system.py" = ["RUF001"]
"core/gsa.py" = ["RUF002", "RUF003", "RUF005"]
"core/interrupts.py" = ["SIM105"]
"core/logger.py" = ["RUF022", "RUF100", "SIM105"]
"core/mcp_client_manager.py" = ["SIM105", "UP035", "UP045"]
"core/memory.py" = ["SIM105", "SIM118"]
"core/persistence.py" = ["RUF005"]
"core/provider_runtime.py" = ["SIM105"]
"core/provider_tui.py" = ["RUF001", "RUF022", "UP045"]
"core/session.py" = ["B904", "RUF001", "RUF059", "RUF100", "SIM105"]
"core/skill_manager.py" = ["SIM105"]
"core/workspace_cleanup.py" = ["UP045"]
"pawnlogic/cli.py" = ["RUF100", "SIM105", "UP036"]
"tests/test_commands_dispatch.py" = ["RUF012"]
"tests/test_config.py" = ["RUF100"]
"tests/test_deployment_friendly.py" = ["SIM300", "UP022"]
"tests/test_naming.py" = ["RUF100"]
"tests/test_providers.py" = ["RUF100"]
"tests/test_security.py" = ["RUF100"]
"tests/test_session_utils.py" = ["RUF100"]
"tools/browser_ops.py" = ["B007"]
"tools/delegate_tool.py" = ["SIM102"]
"tools/docker_sandbox.py" = ["SIM105"]
"tools/file_ops.py" = ["RUF005", "RUF013", "SIM102", "SIM105"]
"tools/lsp_lite.py" = ["RUF003", "RUF005", "SIM102", "SIM105"]
"tools/pwn_chain.py" = ["SIM105", "SIM115"]
"tools/recon_ops.py" = ["SIM105", "UP015"]
"tools/sandbox.py" = ["RUF059", "SIM105", "UP024"]
"tools/web_ops.py" = ["B905", "RUF005"]
"utils/ansi.py" = ["RUF012"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
